--- a/sample page/index.html
+++ b/sample page/index.html
@@ -60,19 +60,19 @@
 <div class="slideshow-container">
 <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="F:\sample page\img\1.jpeg" style="width:100%">
+    <img src="Img\1.jpeg" style="width:100%">
     </div>
 <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="F:\sample page\img\2.jpeg" style="width:100%">
+    <img src="Img\2.jpeg" style="width:100%">
     </div>
 <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="F:\sample page\img\3.jpeg" style="width:100%">
+    <img src="Img\3.jpeg" style="width:100%">
     </div>
 <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="F:\sample page\img\4.jpeg" style="width:100%">
+    <img src="Img\4.jpeg" style="width:100%">
     </div>
  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
